tests/error/modifier_errors/dagger_branch2.err
Error: Invalid expression in dagger (at $FILE:10:12)
   | 
 8 |         with dagger:
 9 |             ok = 3 if 2 > 46 else 0
10 |         x = 1 if 2 > 46 else 0
   |             ^^^^^^^^^^^^^^^^^^ Branch found in a dagger context

Note:
   | 
 6 | def test() -> None:
 7 |     with dagger, power(2):
   |          ---------------- dagger modifier is used here

Guppy compilation failed due to 1 previous error
